--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,4 +19,4 @@ jobs:
                 echo "I will fail"
                 exit 1
             - name: Goodbye
-              run: echo "Goodbye!!""
+              run: echo "Goodbye!!"
